# zephyr

./: CODEOWNERS  README.md  west.yml
boards/arm/arduino_nano_33_ble_sense/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  arduino_nano_33_ble_sense.dts  arduino_nano_33_ble_sense.yaml  arduino_nano_33_ble_sense_defconfig  board.cmake  power_pins_config.c
drivers/audio/: CMakeLists.txt  Kconfig
drivers/audio/pdm/: CMakeLists.txt  Kconfig  pdm.c  pdm.h  pdm_nrfx.c
dts/arm/nordic/: nrf52840.dtsi
include/drivers/audio/: pdm.h
samples/app/demo/: CMakeLists.txt  README.md  build-firmware.sh  prj.conf
samples/app/demo/src/: main.c
samples/app/demo/src/sensors/: accel.c  accel.h
samples/app/sample_apds9960/: CMakeLists.txt  README.rst  prj.conf
samples/app/sample_apds9960/src/: main.c
samples/app/sample_hts221/: prj.conf
samples/app/sample_hts221/src/: main.c
samples/app/sample_lps22hb/: CMakeLists.txt  prj.conf
samples/app/sample_lps22hb/src/: main.c
samples/app/sample_lsm9ds1/: CMakeLists.txt  accel_live_read.py  prj.conf
samples/app/sample_lsm9ds1/src/: main.c
samples/app/sample_mp34dt05/: CMakeLists.txt  prj.conf
samples/app/sample_mp34dt05/src/: main.c
samples/app/sample_mp34dt05_new/: CMakeLists.txt  prj.conf
samples/app/sample_mp34dt05_new/src/: main.c
samples/app/sample_mp34dt05_new/src/usb/: usb.c
samples/app/sample_shell_and_bootloader/: README.md  build-firmware.sh  prj.conf
samples/app/sample_shell_and_bootloader/src/: main.c
samples/app/sample_shell_bootloader_dfu/: README.md  build-firmware.sh  prj.conf
samples/app/sample_shell_bootloader_dfu/src/: main.c
samples/app/sample_shell_bootloader_dfu/v1/: firmware-signed.hex  firmware.hex
samples/app/sample_shell_bootloader_dfu/v2/: bootloader.hex  firmware-signed.hex  firmware.hex
samples/app/sample_shell_bootloader_smp/: build-firmware.sh  prj.conf
samples/app/sample_shell_bootloader_smp/src/: main.c
samples/app/smp_svr/: README.md  build-firmware.sh  prj.conf  sample.yaml
samples/app/smp_svr/src/: main.c
(+12 files in other folders)
